// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompanyContainer Expect to match snapshots 1`] = `
<body>
  <div>
    <div
      class="company-container d-flex flex-column"
    >
      <div
        class="company-heading"
      >
        Manage Company
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class=""
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-prepend"
              >
                <span
                  class="company-search-button input-group-text"
                >
                  <img
                    class=""
                    src="/assets/icons/svg/search.svg"
                  />
                </span>
              </div>
              <div
                class="form-control-seach-text"
              >
                <input
                  class="company-search-box form-control form-control-lg"
                  id="company-search-box"
                  placeholder="Search by company name or sponsoring organization"
                  type="search"
                />
                <div
                  class="close-button-wrapper "
                >
                  <button
                    class="close-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-times fa-w-10 fa-2x "
                      data-icon="times"
                      data-prefix="fal"
                      focusable="false"
                      role="img"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="align-items-center row"
      >
        <div
          class="my-4 col-5"
        >
          <div
            class="chip-button-group d-flex align-items-center"
          >
            <button
              class="chip-buttons selected btn btn-primary"
              id="chip-buttons-null"
              type="button"
            >
              All
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-0"
              type="button"
            >
              Regular
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-1"
              type="button"
            >
              MEP
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-2"
              type="button"
            >
              PEP
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-3"
              type="button"
            >
              Sponsoring Org.
            </button>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="text-right"
          >
             Companies
               
            <a
              href="/manage-company"
            >
              <button
                class="add-icon"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
                  data-icon="plus-square"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M400 64c8.8 0 16 7.2 16 16v352c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h352m0-32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-60 206h-98v-98c0-6.6-5.4-12-12-12h-12c-6.6 0-12 5.4-12 12v98h-98c-6.6 0-12 5.4-12 12v12c0 6.6 5.4 12 12 12h98v98c0 6.6 5.4 12 12 12h12c6.6 0 12-5.4 12-12v-98h98c6.6 0 12-5.4 12-12v-12c0-6.6-5.4-12-12-12z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="loader-wrapper "
      >
        <div
          class="loader-wrapper-overlay"
        >
          <div
            class="spinner-row d-flex align-items-center"
          >
            <div
              class="spinner-border"
              role="status"
            >
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </div>
              
            Loading
          </div>
        </div>
        <div
          class="d-flex flex-column cspl-table undefined"
        >
          <div
            class="d-flex table-head align-items-center undefined"
          >
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-head-cell column-company-name sortable "
              >
                Company Name
              </div>
              <div
                class="d-flex table-head-cell column-company-type sortable "
              >
                Type
              </div>
              <div
                class="d-flex table-head-cell column-company-sponsoring sortable "
              >
                Sponsoring Org.
              </div>
              <div
                class="d-flex table-head-cell column-company-plan sortable "
              >
                Plan IDs
              </div>
              <div
                class="d-flex table-head-cell column-company-employees sortable "
              >
                Employees
              </div>
              <div
                class="d-flex table-head-cell column-company-participation sortable "
              >
                Participation %
              </div>
            </div>
          </div>
          <div
            class="d-flex flex-column table-body undefined"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CompanyContainer Render generic table 1`] = `
<body>
  <div>
    <div
      class="company-container d-flex flex-column"
    >
      <div
        class="company-heading"
      >
        Manage Company
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class=""
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-prepend"
              >
                <span
                  class="company-search-button input-group-text"
                >
                  <img
                    class=""
                    src="/assets/icons/svg/search.svg"
                  />
                </span>
              </div>
              <div
                class="form-control-seach-text"
              >
                <input
                  class="company-search-box form-control form-control-lg"
                  id="company-search-box"
                  placeholder="Search by company name or sponsoring organization"
                  type="search"
                />
                <div
                  class="close-button-wrapper "
                >
                  <button
                    class="close-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-times fa-w-10 fa-2x "
                      data-icon="times"
                      data-prefix="fal"
                      focusable="false"
                      role="img"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="align-items-center row"
      >
        <div
          class="my-4 col-5"
        >
          <div
            class="chip-button-group d-flex align-items-center"
          >
            <button
              class="chip-buttons selected btn btn-primary"
              id="chip-buttons-null"
              type="button"
            >
              All
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-0"
              type="button"
            >
              Regular
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-1"
              type="button"
            >
              MEP
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-2"
              type="button"
            >
              PEP
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-3"
              type="button"
            >
              Sponsoring Org.
            </button>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="text-right"
          >
            40 Companies
               
            <a
              href="/manage-company"
            >
              <button
                class="add-icon"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
                  data-icon="plus-square"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M400 64c8.8 0 16 7.2 16 16v352c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h352m0-32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-60 206h-98v-98c0-6.6-5.4-12-12-12h-12c-6.6 0-12 5.4-12 12v98h-98c-6.6 0-12 5.4-12 12v12c0 6.6 5.4 12 12 12h98v98c0 6.6 5.4 12 12 12h12c6.6 0 12-5.4 12-12v-98h98c6.6 0 12-5.4 12-12v-12c0-6.6-5.4-12-12-12z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="loader-wrapper "
      >
        <div
          class="d-flex flex-column cspl-table undefined"
        >
          <div
            class="d-flex table-head align-items-center undefined"
          >
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-head-cell column-company-name sortable "
              >
                Company Name
              </div>
              <div
                class="d-flex table-head-cell column-company-type sortable "
              >
                Type
              </div>
              <div
                class="d-flex table-head-cell column-company-sponsoring sortable "
              >
                Sponsoring Org.
              </div>
              <div
                class="d-flex table-head-cell column-company-plan sortable "
              >
                Plan IDs
              </div>
              <div
                class="d-flex table-head-cell column-company-employees sortable "
              >
                Employees
              </div>
              <div
                class="d-flex table-head-cell column-company-participation sortable "
              >
                Participation %
              </div>
            </div>
          </div>
          <div
            class="d-flex flex-column table-body undefined"
          >
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/36"
                >
                  Company1
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                Regular
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/37"
                >
                  Company2
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                Regular
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/38"
                >
                  SPONS1
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/39"
                >
                  Test1
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                Regular
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/95"
                >
                  test
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                MEP
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/260"
                >
                  SPO3
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/261"
                >
                  SPO3
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/352"
                >
                  test25
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                MEP
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/353"
                >
                  test
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                MEP
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/354"
                >
                  test
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                MEP
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/355"
                >
                  test6
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                MEP
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/356"
                >
                  SPO4
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/357"
                >
                  SP05
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/358"
                >
                  spo6
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/359"
                >
                  spo7
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/360"
                >
                  spo7
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/361"
                >
                  teasdsa
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                MEP
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/362"
                >
                  test8
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                MEP
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
            <div
              class="d-flex table-row undefined"
            >
              <div
                class="d-flex table-cell column-company-name"
              >
                <a
                  href="/manage-company/definitions/edit/363"
                >
                  SPO8
                </a>
              </div>
              <div
                class="d-flex table-cell column-company-type"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-sponsoring"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-plan"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
              <div
                class="d-flex table-cell column-company-employees"
              >
                0
              </div>
              <div
                class="d-flex table-cell column-company-participation"
              >
                <span
                  class="null-data"
                >
                  NA
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`CompanyContainer Render sponsoring org table 1`] = `
<body>
  <div>
    <div
      class="company-container d-flex flex-column"
    >
      <div
        class="company-heading"
      >
        Manage Company
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <form
            class=""
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-prepend"
              >
                <span
                  class="company-search-button input-group-text"
                >
                  <img
                    class=""
                    src="/assets/icons/svg/search.svg"
                  />
                </span>
              </div>
              <div
                class="form-control-seach-text"
              >
                <input
                  class="company-search-box form-control form-control-lg"
                  id="company-search-box"
                  placeholder="Search by company name or sponsoring organization"
                  type="search"
                />
                <div
                  class="close-button-wrapper "
                >
                  <button
                    class="close-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-times fa-w-10 fa-2x "
                      data-icon="times"
                      data-prefix="fal"
                      focusable="false"
                      role="img"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
                        fill="currentColor"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="align-items-center row"
      >
        <div
          class="my-4 col-5"
        >
          <div
            class="chip-button-group d-flex align-items-center"
          >
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-null"
              type="button"
            >
              All
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-0"
              type="button"
            >
              Regular
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-1"
              type="button"
            >
              MEP
            </button>
            <button
              class="chip-buttons  btn btn-primary"
              id="chip-buttons-2"
              type="button"
            >
              PEP
            </button>
            <button
              class="chip-buttons selected btn btn-primary"
              id="chip-buttons-3"
              type="button"
            >
              Sponsoring Org.
            </button>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="text-right"
          >
            8 Sponsoring Org.
               
            <a
              href="/manage-company"
            >
              <button
                class="add-icon"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-plus-square fa-w-14 fa-lg "
                  data-icon="plus-square"
                  data-prefix="fal"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M400 64c8.8 0 16 7.2 16 16v352c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V80c0-8.8 7.2-16 16-16h352m0-32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-60 206h-98v-98c0-6.6-5.4-12-12-12h-12c-6.6 0-12 5.4-12 12v98h-98c-6.6 0-12 5.4-12 12v12c0 6.6 5.4 12 12 12h98v98c0 6.6 5.4 12 12 12h12c6.6 0 12-5.4 12-12v-98h98c6.6 0 12-5.4 12-12v-12c0-6.6-5.4-12-12-12z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </a>
          </div>
        </div>
      </div>
      <div
        class="sponsor-org-table row"
      >
        <div
          class="sponsored-org-list col-2"
        >
          <div
            class="loader-wrapper "
          >
            <div
              class="d-flex flex-column sponsored-org"
            >
              <button
                class="d-flex justify-content-between sponsored-org-item selected"
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  SP05
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    1
                  </span>
                </div>
              </button>
              <button
                class="d-flex justify-content-between sponsored-org-item "
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  SPO AVE
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    1
                  </span>
                </div>
              </button>
              <button
                class="d-flex justify-content-between sponsored-org-item "
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  SPO3
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    19
                  </span>
                </div>
              </button>
              <button
                class="d-flex justify-content-between sponsored-org-item "
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  SPO3
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    6
                  </span>
                </div>
              </button>
              <button
                class="d-flex justify-content-between sponsored-org-item "
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  SPO4
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    3
                  </span>
                </div>
              </button>
              <button
                class="d-flex justify-content-between sponsored-org-item "
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  spo6
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    2
                  </span>
                </div>
              </button>
              <button
                class="d-flex justify-content-between sponsored-org-item "
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  SPO8
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    1
                  </span>
                </div>
              </button>
              <button
                class="d-flex justify-content-between sponsored-org-item "
                variant="link"
              >
                <div
                  class="sponsored-org-name"
                >
                  SPONS1
                </div>
                <div>
                  <span
                    class="sponsored-org-count"
                  >
                    14
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="sponsored-org-list-table d-flex flex-column col-10"
        >
          <div
            class="selected-sponsor-org-title"
          >
            SP05
             
            (1)
          </div>
          <div
            class="loader-wrapper "
          >
            <div
              class="d-flex flex-column cspl-table undefined"
            >
              <div
                class="d-flex table-head align-items-center undefined"
              >
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-head-cell column-company-name sortable asc"
                  >
                    Company Name
                  </div>
                  <div
                    class="d-flex table-head-cell column-company-type sortable "
                  >
                    Type
                  </div>
                  <div
                    class="d-flex table-head-cell column-company-plan sortable "
                  >
                    Plan IDs
                  </div>
                  <div
                    class="d-flex table-head-cell column-company-employees sortable "
                  >
                    Employees
                  </div>
                  <div
                    class="d-flex table-head-cell column-company-participation sortable "
                  >
                    Participation %
                  </div>
                </div>
              </div>
              <div
                class="d-flex flex-column table-body undefined"
              >
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/357"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/413"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/260"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/261"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/356"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/358"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/363"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/38"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/357"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/413"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/260"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/261"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/356"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/358"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/363"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
                <div
                  class="d-flex table-row undefined"
                >
                  <div
                    class="d-flex table-cell column-company-name"
                  >
                    <a
                      href="/manage-company/definitions/edit/38"
                    />
                  </div>
                  <div
                    class="d-flex table-cell column-company-type"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-plan"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-employees"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                  <div
                    class="d-flex table-cell column-company-participation"
                  >
                    <span
                      class="null-data"
                    >
                      NA
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
